[gd_scene load_steps=3 format=3 uid="uid://bfutyb3sso3te"]

[ext_resource type="Script" path="res://scripts/window_size_script.gd" id="1_atsut"]
[ext_resource type="Script" path="res://scripts/settings/custom_size.gd" id="2_i8ewb"]

[node name="WindowSize" type="HBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -11.5
offset_right = 76.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_atsut")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Window Size"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="."]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="OptionButton" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = " ... "

[node name="PopupPanel" type="PopupPanel" parent="HBoxContainer"]
title = "CustomSize"
initial_position = 1
size = Vector2i(266, 192)
script = ExtResource("2_i8ewb")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PopupPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 262.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PopupPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Title" type="Label" parent="HBoxContainer/PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Enter Custom Resolution:"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 8
columns = 2

[node name="Width" type="Label" parent="HBoxContainer/PopupPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Width:"

[node name="WidthEdit" type="LineEdit" parent="HBoxContainer/PopupPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Custom Width"
alignment = 2
max_length = 4
context_menu_enabled = false

[node name="Height" type="Label" parent="HBoxContainer/PopupPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Height:"

[node name="HeightEdit" type="LineEdit" parent="HBoxContainer/PopupPanel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Custom Height"
alignment = 2
max_length = 4
context_menu_enabled = false

[node name="Label" type="Label" parent="HBoxContainer/PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45098, 0.45098, 0.45098, 1)
theme_override_font_sizes/font_size = 12
text = "WIDTH x HEIGHT"
horizontal_alignment = 1

[node name="Button" type="Button" parent="HBoxContainer/PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Submit"

[connection signal="item_selected" from="HBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="custom_size" from="HBoxContainer/PopupPanel" to="." method="_on_popup_panel_custom_size"]
[connection signal="text_changed" from="HBoxContainer/PopupPanel/MarginContainer/VBoxContainer/GridContainer/WidthEdit" to="HBoxContainer/PopupPanel" method="_on_width_edit_text_changed"]
[connection signal="text_changed" from="HBoxContainer/PopupPanel/MarginContainer/VBoxContainer/GridContainer/HeightEdit" to="HBoxContainer/PopupPanel" method="_on_height_edit_text_changed"]
[connection signal="pressed" from="HBoxContainer/PopupPanel/MarginContainer/VBoxContainer/Button" to="HBoxContainer/PopupPanel" method="_on_button_pressed"]
